Integrating with QARK tapjacking demo

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,14 @@
         android:layout_height="wrap_content"
         android:text="Test" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="150dip"
+        android:layout_height="150dip"
+        android:layout_marginTop="230dip"
+        android:layout_marginLeft="75dip"
+        android:text="Transfer Money?" />
+
     <RelativeLayout
         android:id="@+id/contactListContainer"
         android:layout_width="wrap_content"
